<resources>
    <string name="app_name">Waste Management</string>
    <string name="google_maps_key" translatable="false">AIzaSyDOQJwtEhQbAC38Za6wA1RW5Ipd5Vxj3CE</string>

    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="btn_login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="donar">Donor</string>
    <string name="acceptor">Acceptor</string>
    <string name="select_category">Select Category</string>
    <string name="organization_list">Organization List</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="send_link">Send Link</string>
    <string name="please_enter_your_register_email_address_to_receive_your_rest_password_link">Please enter your register email address to receive your rest password link.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="orgnization_name">Orgnization Name</string>
    <string name="organization_location">Organization Location</string>
    <string name="organization_contact">Organization Contact</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="no_organization_listed_wtih_this_category">No organization listed wtih this category</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account_confirmation">Are you sure you want to deactivate your account?</string>
    <string name="no_categories_available">No categories available.</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="request">Request</string>
    <string name="donation_request">Donation Request</string>
    <string name="donar_name">Donor Name</string>
    <string name="donor_contact_number">Donor Contact Number</string>
    <string name="donor_email">Donor Email</string>
    <string name="donor_location">Donor Location</string>
    <string name="acceptor_name">Acceptor Name</string>
    <string name="donation_description">Donation Description</string>
    <string name="attachments">Attachments</string>
    <string name="permission_denied">If you reject permission,you can not use this service Please turn on permissions at
        [Setting] > [Permission]
    </string>
    <string name="send_request">Send Request</string>
    <string name="title_activity_acceptor_drawer">AcceptorDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_update_profile">Update Profile</string>
    <string name="menu_deavtivate_account">Deactivate Account</string>
    <string name="menu_logout">Logout</string>
    <string name="no_request_found">No Request Found.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="request_rejected">Request Rejected</string>


</resources>