<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.donor.donationrequest.DonationRequestActivity">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtHeaderText"
            style="@style/textviewHeaderStyle"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/donation_request"
            android:textColor="@color/white" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutHeader"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edDonorName"
                style="@style/edittextviewNormalStyle"
                android:background="@drawable/bg_edittext"
                android:hint="@string/donar_name"
                android:maxLines="1"
                android:paddingStart="@dimen/_15sdp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edDonorContact"
                style="@style/edittextviewNormalStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/donor_contact_number"
                android:maxLines="1"
                android:inputType="phone"
                android:paddingStart="@dimen/_15sdp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edDonorEmail"
                style="@style/edittextviewNormalStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/donor_email"
                android:maxLines="1"
                android:paddingStart="@dimen/_15sdp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txtDonorLocation"
                style="@style/edittextviewNormalStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/donor_location"
                android:maxLines="1"
                android:paddingStart="@dimen/_15sdp"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edAcceptorName"
                style="@style/edittextviewNormalStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/acceptor_name"
                android:inputType="text"
                android:maxLines="1"
                android:enabled="false"
                android:alpha="0.5"
                android:editable="false"
                android:paddingStart="@dimen/_15sdp"
                android:singleLine="true" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edDonationDescription"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/donation_description"
                android:paddingTop="@dimen/_10sdp"
                android:textColorHint="@color/black"
                android:gravity="top"
                android:singleLine="false"
                android:fontFamily="@font/lato_regular"
                android:paddingStart="@dimen/_15sdp"
                android:textSize="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUploadImages"
                style="@style/btnDahboardStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_button"
                android:text="@string/attachments"
                android:textAllCaps="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDonationAttachments"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSendRequest"
                style="@style/btnDahboardStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_button"
                android:text="@string/send_request"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>